# API-gerenciamento-financeiro-

./: README.md  pyproject.toml
api/: main.py
api/auth/: auth_controller.py  auth_schema.py  auth_service.py
api/controllers/: saldo_controller.py  transacao.controller.py  transacao_controller.py
api/core/: database.py  security.py
api/database/: fake_db.py
api/models/: transacao_model.py  user_model.py
api/service/: saldo_service.py  transacao_service.py
api/utils/: security.py
api/view/: saldo_view.py  transacao_view.py
database/: financas.sql  financas.sqlite
